--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,4 +45,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.core:core:1.0.0'
 }
