--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <application
         android:label="SMS Forwarder"
         android:icon="@mipmap/ic_launcher">
-        <receiver android:name="com.shounakmulay.telephony.sms.MyAlarmReceiver"
-            android:exported="true">
+<!--        <receiver android:name="com.shounakmulay.telephony.sms.MyAlarmReceiver"-->
+<!--            android:exported="true">-->
 
-        </receiver>
+<!--        </receiver>-->
         <!-- Declare your background service here -->
-        <service
-            android:name="com.shounakmulay.telephony.sms.SmsListenerService"
-            android:exported="false" />
+<!--        <service-->
+<!--            android:name="com.shounakmulay.telephony.sms.SmsListenerService"-->
+<!--            android:exported="false" />-->
 
         <!-- Other application components and settings go here -->
     </application>
